# l0

./: .env.example  .gitattributes  .gitignore  CITATION.cff  NOTICE  README.md  pixi.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yaml
data/: README.md  download_datasets.py  filter_datasets.py  merge_datasets.py  quality_assess_datasets.py
data/data_processing/: dataset_merger.py  filter.py  prompt.py  quality_assessor.py  utils.py
data/data_processing/downloader/: __init__.py  bamboogle_downloader.py  base_downloader.py  hotpotqa_downloader.py  musique_downloader.py  natural_questions_downloader.py  (+4 more)
evaluation/nb_agent_eval/: README.md  compute_metrics.py  evaluator.py  main.py  run_eval.sh  sampler.py  simpleqa_metrics.py
examples/: model_converter.py  start_task_server.sh
examples/data_preprocess/: l0_qa.py
examples/nb_agent/: deep_searcher.ipynb  deep_searcher_case.md  prompt.py
examples/nb_agent_training/: train_nb_agent.py  train_qa_reinforcepp_dynamic_0_6b.sh  train_qa_reinforcepp_dynamic_32b.sh  train_qa_reinforcepp_dynamic_4b.sh  train_qa_reinforcepp_dynamic_7b.sh
examples/sgl_serving/: README.md  launch_server.py  monkey_patch.py
src/l0/: __init__.py  utils.py
tests/: test_bi_level_gae.py  test_chunk.py  test_data_process.py  test_multistep_reward_manager.py  test_nb_agent_reward.py  test_pad_with_mask.py  test_parquet_load.py  test_qa_dataset.py  test_sampling_nb_agent.py  test_sglang_patch.py  test_sglang_server.py  test_task_server.py  test_trajectory_sampler.py
tests/config/: ppo_trainer.yaml
(+47 files in other folders)
